--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -28,8 +28,8 @@
     display: inline-block;
     backdrop-filter: blur(10px);
     padding: 5px 5px;
-    background-color: rgba(0, 0, 0, 0.5); /* Optional: adds slight dark background */
-    border-radius: 10px; /* Optional: rounds the corners */
+    background-color: rgba(0, 0, 0, 0.5); /*adds slight dark background */
+    border-radius: 10px; /* rounds the corners */
   }
 
   .code-stats{
