--- a/_layouts/about-me.html
+++ b/_layouts/about-me.html
@@ -13,7 +13,7 @@ layout: default
   .profile-links svg {
     vertical-align: middle; /* Aligns SVG with other icons */
     position: relative;
-    top: -1px; /* Fine-tune vertical position */
+    top: -1px; /* Fine-tuning vertical position */
     width: 16px; /* Match Font Awesome icon size */
     height: 16px; /* Match Font Awesome icon size */
   }
@@ -24,17 +24,13 @@ layout: default
     gap: 10px; /* Creates equal spacing between icons */
   }
 
-
   .social-link:hover {
     transform: scale(1.2); /* Makes icon slightly bigger on hover */
     color: darkorange; /* Matches your existing color scheme */
   }
 
-
-
   .profile-links:hover {
     color: darkorange;
-
   }
 
 </style>
