--- a/_includes/blog_post_article.html
+++ b/_includes/blog_post_article.html
@@ -1,48 +1,49 @@
 <article class="card" itemscope itemtype="http://schema.org/BlogPosting">
-  <div class="card-header">
-    <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
-    <h4 class="post-meta">{{ page.summary }}</h4>
-    <p class="post-summary">
-      Posted by : {% if page.author %}
-      <span itemprop="author" itemscope itemtype="http://schema.org/Person">
+    <div class="card-header">
+        <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
+        <h4 class="post-meta">{{ page.summary }}</h4>
+        <p class="post-summary">
+            Posted by : {% if page.author %}
+            <span itemprop="author" itemscope itemtype="http://schema.org/Person">
         <span itemprop="name"><a href="{{site.url}}/about/">{{ page.author }}</a></span> </span
-      >{% endif %} on
-      <time datetime="{{ page.date }}" itemprop="datePublished"
-        >{{ page.date | date: "%b %-d, %Y" }}</time
-      >
-    </p>
-    <span
-      class="disqus-comment-count"
-      data-disqus-identifier="{{ page.url }}"
-    ></span>
-    <div class="post-categories">
-      {% if post %} {% assign categories = post.categories %} {% else %} {%
-      assign categories = page.categories %} {% endif %} Category : {% for
-      category in categories %}
-      <a href="{{site.baseurl}}/blog/categories/{{category|slugize}}"
-        >{{category}}</a
-      >
-      {% unless forloop.last %}&nbsp;{% endunless %} {% endfor %}
+            >{% endif %} on
+            <time datetime="{{ page.date }}" itemprop="datePublished"
+            >{{ page.date | date: "%b %-d, %Y" }}
+            </time
+            >
+        </p>
+        <span
+                class="disqus-comment-count"
+                data-disqus-identifier="{{ page.url }}"
+        ></span>
+        <div class="post-categories">
+            {% if post %} {% assign categories = post.categories %} {% else %} {%
+            assign categories = page.categories %} {% endif %} Category : {% for
+            category in categories %}
+            <a href="{{site.baseurl}}/blog/categories/{{category|slugize}}"
+            >{{category}}</a
+            >
+            {% unless forloop.last %}&nbsp;{% endunless %} {% endfor %}
+        </div>
     </div>
-  </div>
 
-  <div class="card-body" itemprop="articleBody">
-<!--The class directly below handles the thumbnail at the start of each blog post in its respective article.-->
-<!--    <img-->
-<!--      class="card-img-top"-->
-<!--      src="{{site.url}}{{site.baseurl}}{{ page.thumbnail }}"-->
-<!--      alt="{{ post.title }}"-->
-<!--    />-->
+    <div class="card-body" itemprop="articleBody">
+        <!--The class directly below handles the thumbnail at the start of each blog post in its respective article.-->
+        <!--    <img-->
+        <!--      class="card-img-top"-->
+        <!--      src="{{site.url}}{{site.baseurl}}{{ page.thumbnail }}"-->
+        <!--      alt="{{ post.title }}"-->
+        <!--    />-->
 
-<!--   <br />
-   <br />-->
-    {{ content }}
-    <br />
-    <!-- Author box -->
-    {% assign author = site.data.authors[page.author] %}
-      {% if author %}
-      {% include author.html %}
-    {% endif %}
-  </div>
+        <!--   <br />
+           <br />-->
+        {{ content }}
+        <br/>
+        <!-- Author box -->
+        {% assign author = site.data.authors[page.author] %}
+        {% if author %}
+        {% include author.html %}
+        {% endif %}
+    </div>
 
 </article>
